--- a/_playground.ipynb
+++ b/_playground.ipynb
@@ -16,6 +16,25 @@
    "source": [
     "print(\"Hello, World!\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your band name could be columbus shadow\n"
+     ]
+    }
+   ],
+   "source": [
+    "cityName = input('Where were you born?\\n')\n",
+    "petName = input('What is your pet\\'s name?\\n')\n",
+    "print('Your band name could be ' + cityName + ' ' + petName)\n"
+   ]
   }
  ],
  "metadata": {
